2003-01-29  Dick Porter  <dick@ximian.com>

	* threads.c: No need for the fake_thread kludge now that Thread
	doesn't run a class constructor
	
2003-01-29  Dick Porter  <dick@ximian.com>

	* threads.c: Use g_direct_hash instead of the rather bogus
	g_int_hash

2003-01-29  Dietmar Maurer  <dietmar@ximian.com>

	* marshal.c (mono_marshal_get_native_wrapper): add check for null
	(fix pinvoke12.exe)
	(mono_marshal_get_struct_to_ptr): generate valid IL code
	(mono_marshal_get_ptr_to_struct): generate valid IL code
	(*): correctly set sig->pinvoke, we need to memdup the signature
	to do that

Tue Jan 28 22:57:57 CET 2003 Paolo Molaro <lupus@ximian.com>

	* marshal.c, marshal.h: use larger integers in mono_mb_emit_add_to_local()
	to avoid overflows (bug spotted and fixed by Jerome Laban <jlaban@wanadoo.fr>).

Tue Jan 28 18:55:19 CET 2003 Paolo Molaro <lupus@ximian.com>

	* profiler.c: provide more callers information.

2003-01-28  Dietmar Maurer  <dietmar@ximian.com>

	* marshal.c (mono_marshal_get_managed_wrapper): generate valid IL code

	* appdomain.h:added fix from Patrik: _MonoAppDomain is a MBR object

	* marshal.c (mono_marshal_get_native_wrapper): generate valid IL code

2003-01-27  Zoltan Varga  <vargaz@freemail.hu>

	* icall.c: (ves_icall_System_CurrentTimeZone_GetTimeZoneData): raise an
	exception instead of going into an infinite loop on dates which it 
	can't yet handle.

	* string-icalls.c (ves_icall_System_String_get_Chars): raise 
	out-of-range exception if needed.

	* class.c (mono_class_setup_vtable): allow a virtual method to provide
	an implementation for an interface method and to override an inherited
	method at the same time. 
	Imagine a scenario when a virtual method is used to override a
	virtual abstract method in a parent class, and this same method 
	provides an implementation for an method inherited from an interface. 
	In this case, the interface resolution code will set im->slot, which 